# MandelZoomer

./: CMakeLists.txt  build_debug.sh  build_release.sh  embed_shader.cmake
Content/Shaders/Compiled/DXIL/: mandel.frag.dxil  mandel.vert.dxil
Content/Shaders/Compiled/MSL/: mandel.frag.msl  mandel.vert.msl
Content/Shaders/Compiled/SPIRV/: mandel.frag.spv  mandel.vert.spv
Content/Shaders/Source/: compile_shaders.sh  mandel.frag.hlsl  mandel.frag.wgsl  mandel.vert.hlsl  mandel.vert.wgsl
glfw3webgpu/: CMakeLists.txt  glfw3webgpu.c
include/exception/: FileIOException.h  GLFWException.h  SDLException.h  WGPUException.h
include/render/: MandelRender.h  RenderProps.h  RenderSurface.hpp
include/window/: MandelWindow.h
src/: main.cpp
src/render/: MandelRender.cpp  RenderProps.cpp
src/window/: MandelWindow.cpp
